fixed nav spacing

--- a/static/scss/_header.scss
+++ b/static/scss/_header.scss
@@ -88,12 +88,11 @@
         font-size: 1.2rem;
         padding: 0;
         text-align: right; // right side of nav aligns with banner
-        width: 25%;
+        width: 28%;
         &:last-child {
           font-size: 1.2rem;
           margin-left: 6%;
           text-align: center;
-          width: 40%;
         }
       }
     }
